# pyPSC

./: .gitignore  CITATION.cff  README.md  pyproject.toml
examples/: README.md
examples/ex01_3DMC-EPA-amplitude/: README.md  ex01-EPA-Amplitude-approach.ipynb  ex01.ipynb  pnew_2.h5  pnew_4.h5  pnew_5.h5  pnew_6.h5
examples/ex02_3DMC-EPA-intensity/: README.md  ex02-EPA-Intensity-approach.ipynb  ex02.ipynb  pnew_6.h5  pnew_7.h5
examples/ex03-Jupyter NB/: README.md  exaple-for-psc.h5
examples/ex03_strucutre determination in JNB/: ex03-Workout-with-test-structure.ipynb
examples/ex03_strucutre determination_workout/: README.md  ex03-Workout-with-test-structure.ipynb
lib/: MCinNDPS_EPA.py  __init__.py  analyzehklfile.py  createfolder.py  nDMC_EPA.py  nEPA-try.py  solvestructure2DPS.py  solvestructureNDPS.py  x2Dlinearize.py  x2Dpolygon.py  x2Dwritesolution.py  x3Dchecklinearization.py  x3Dintersection.py  x3DlinearizationEPA.py  x3DlinearizationnEPA.py  x3Dlinearizazion.py  x3Dreadwrite.py  x3Drepetition.py  xlinearizationtools.py
libs/: clusteringsolution.py  solvestructure2DPS.py  solvestructureNDPS.py  x2Dlinearize.py  x2Dplot.py  x2Dpolygon.py  x2Drepetition.py  x3Dchecklinearization.py  x3Dintersection.py  x3Dlinearizazion.py  x3DlinearizazionnEPA.py  x3Dplot.py  x3Dreadwrite.py  x3Drepetition.py
pyPSC.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test1.py
tools/: __init__.py  analyzehklfile.py  experimentalstructureNDPS.py  plot3DMC_results.py  plot3DMCresults.py  plottime.py  x2Dplot.py  x3Dplot.py  xplottime.py
utils/: plottime.py
(+84 files in other folders)
